--- a/notebook/2. MODEL TRAINING.IPYNB
+++ b/notebook/2. MODEL TRAINING.IPYNB
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1541,
+   "execution_count": 1825,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,12 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "from sklearn.neighbors import KNeighborsRegressor,KNeighborsClassifier\n",
-    "from sklearn.tree import DecisionTreeRegressor,DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestRegressor,RandomForestClassifier,GradientBoostingClassifier,AdaBoostRegressor\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier,GradientBoostingClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from xgboost import XGBRegressor\n",
-    "from sklearn.svm import SVR\n",
-    "from sklearn.linear_model import LinearRegression, Ridge,Lasso,LogisticRegression\n",
-    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "import warnings"
    ]
   },
@@ -49,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1542,
+   "execution_count": 1826,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1543,
+   "execution_count": 1827,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +214,7 @@
        "4          85         3000        Sleep Apnea    140.0    90.0  "
       ]
      },
-     "execution_count": 1543,
+     "execution_count": 1827,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1544,
+   "execution_count": 1828,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1545,
+   "execution_count": 1829,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +269,7 @@
        "       dtype='object'))"
       ]
      },
-     "execution_count": 1545,
+     "execution_count": 1829,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1546,
+   "execution_count": 1830,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1547,
+   "execution_count": 1831,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1548,
+   "execution_count": 1832,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1549,
+   "execution_count": 1833,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1550,
+   "execution_count": 1834,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1551,
+   "execution_count": 1835,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1552,
+   "execution_count": 1836,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1553,
+   "execution_count": 1837,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1554,
+   "execution_count": 1838,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +760,7 @@
        "4    -2.362273  1.479309  0.869486  "
       ]
      },
-     "execution_count": 1554,
+     "execution_count": 1838,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1555,
+   "execution_count": 1839,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1556,
+   "execution_count": 1840,
    "metadata": {},
    "outputs": [
     {
@@ -802,13 +798,12 @@
        " array(['Insomnia', 'No Sleep Disorder', 'Sleep Apnea'], dtype=object))"
       ]
      },
-     "execution_count": 1556,
+     "execution_count": 1840,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Display the shapes of the resulting datasets\n",
     "(X_train.shape, X_test.shape, y_train.shape, y_test.shape), label_encoder.classes_"
    ]
   },
@@ -816,125 +811,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1) Create an Evaluate Function to give all metrics after model Training"
+    "### 5.1 Create an Evaluate Function to give all metrics after model Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1557,
+   "execution_count": 1841,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Decision Tree Classifier - Classification\n",
-      "Training set performance:\n",
-      "- Accuracy: 0.9298\n",
-      "- Precision: 0.9306\n",
-      "- Recall: 0.9298\n",
-      "- F1 Score: 0.9300\n",
-      "Test set performance:\n",
-      "- Accuracy: 0.9067\n",
-      "- Precision: 0.9084\n",
-      "- Recall: 0.9067\n",
-      "- F1 Score: 0.9072\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Random Forest Classifier - Classification\n",
-      "Training set performance:\n",
-      "- Accuracy: 0.9298\n",
-      "- Precision: 0.9298\n",
-      "- Recall: 0.9298\n",
-      "- F1 Score: 0.9297\n",
-      "Test set performance:\n",
-      "- Accuracy: 0.9467\n",
-      "- Precision: 0.9484\n",
-      "- Recall: 0.9467\n",
-      "- F1 Score: 0.9459\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Gradient Boosting Classifier - Classification\n",
-      "Training set performance:\n",
-      "- Accuracy: 0.9264\n",
-      "- Precision: 0.9265\n",
-      "- Recall: 0.9264\n",
-      "- F1 Score: 0.9264\n",
-      "Test set performance:\n",
-      "- Accuracy: 0.9467\n",
-      "- Precision: 0.9484\n",
-      "- Recall: 0.9467\n",
-      "- F1 Score: 0.9459\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "K-Neighbors Classifier - Classification\n",
-      "Training set performance:\n",
-      "- Accuracy: 0.8930\n",
-      "- Precision: 0.8942\n",
-      "- Recall: 0.8930\n",
-      "- F1 Score: 0.8934\n",
-      "Test set performance:\n",
-      "- Accuracy: 0.9200\n",
-      "- Precision: 0.9234\n",
-      "- Recall: 0.9200\n",
-      "- F1 Score: 0.9207\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "SVC - Classification\n",
-      "Training set performance:\n",
-      "- Accuracy: 0.8863\n",
-      "- Precision: 0.8904\n",
-      "- Recall: 0.8863\n",
-      "- F1 Score: 0.8872\n",
-      "Test set performance:\n",
-      "- Accuracy: 0.9067\n",
-      "- Precision: 0.9139\n",
-      "- Recall: 0.9067\n",
-      "- F1 Score: 0.9077\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Logistic Regression - Classification\n",
-      "Training set performance:\n",
-      "- Accuracy: 0.9097\n",
-      "- Precision: 0.9095\n",
-      "- Recall: 0.9097\n",
-      "- F1 Score: 0.9095\n",
-      "Test set performance:\n",
-      "- Accuracy: 0.9067\n",
-      "- Precision: 0.9066\n",
-      "- Recall: 0.9067\n",
-      "- F1 Score: 0.9060\n",
-      "===================================\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Import necessary libraries\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor, AdaBoostRegressor\n",
-    "from sklearn.svm import SVR\n",
-    "from xgboost import XGBRegressor\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "\n",
+    "# Train and Test metrics\n",
     "def evaluate_classification_model(true, predicted):\n",
     "    accuracy = accuracy_score(true, predicted)\n",
     "    precision = precision_score(true, predicted, average='weighted')\n",
     "    recall = recall_score(true, predicted, average='weighted')\n",
     "    f1 = f1_score(true, predicted, average='weighted')\n",
-    "    return accuracy, precision, recall, f1\n",
-    "\n",
+    "    return accuracy, precision, recall, f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1842,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Classification models\n",
     "classification_models = {\n",
     "    \"Decision Tree Classifier\": DecisionTreeClassifier(),\n",
@@ -945,6 +845,8 @@
     "    \"Logistic Regression\": LogisticRegression()\n",
     "}\n",
     "\n",
+    "results = []\n",
+    "\n",
     "for name, model in classification_models.items():\n",
     "    model.fit(X_train, y_train)\n",
     "    y_train_pred = model.predict(X_train)\n",
@@ -953,28 +855,242 @@
     "    train_metrics = evaluate_classification_model(y_train, y_train_pred)\n",
     "    test_metrics = evaluate_classification_model(y_test, y_test_pred)\n",
     "    \n",
-    "    print(f\"{name} - Classification\")\n",
-    "    print('Training set performance:')\n",
-    "    print(f\"- Accuracy: {train_metrics[0]:.4f}\")\n",
-    "    print(f\"- Precision: {train_metrics[1]:.4f}\")\n",
-    "    print(f\"- Recall: {train_metrics[2]:.4f}\")\n",
-    "    print(f\"- F1 Score: {train_metrics[3]:.4f}\")\n",
-    "    print('Test set performance:')\n",
-    "    print(f\"- Accuracy: {test_metrics[0]:.4f}\")\n",
-    "    print(f\"- Precision: {test_metrics[1]:.4f}\")\n",
-    "    print(f\"- Recall: {test_metrics[2]:.4f}\")\n",
-    "    print(f\"- F1 Score: {test_metrics[3]:.4f}\")\n",
-    "    print('='*35)\n",
-    "    print('\\n')\n",
-    "\n"
+    "    results.append({\n",
+    "        'Model': name,\n",
+    "        'Train Accuracy': train_metrics[0],\n",
+    "        'Train Precision': train_metrics[1],\n",
+    "        'Train Recall': train_metrics[2],\n",
+    "        'Train F1 Score': train_metrics[3],\n",
+    "        'Test Accuracy': test_metrics[0],\n",
+    "        'Test Precision': test_metrics[1],\n",
+    "        'Test Recall': test_metrics[2],\n",
+    "        'Test F1 Score': test_metrics[3]\n",
+    "    })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1843,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Creating DataFrame sorting based on F1 Score\n",
+    "df_results = pd.DataFrame(results).sort_values(by='Test F1 Score', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1844,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Train Accuracy</th>\n",
+       "      <th>Train Precision</th>\n",
+       "      <th>Train Recall</th>\n",
+       "      <th>Train F1 Score</th>\n",
+       "      <th>Test Accuracy</th>\n",
+       "      <th>Test Precision</th>\n",
+       "      <th>Test Recall</th>\n",
+       "      <th>Test F1 Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Random Forest Classifier</td>\n",
+       "      <td>0.929766</td>\n",
+       "      <td>0.929595</td>\n",
+       "      <td>0.929766</td>\n",
+       "      <td>0.929663</td>\n",
+       "      <td>0.946667</td>\n",
+       "      <td>0.948381</td>\n",
+       "      <td>0.946667</td>\n",
+       "      <td>0.945882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Gradient Boosting Classifier</td>\n",
+       "      <td>0.926421</td>\n",
+       "      <td>0.926476</td>\n",
+       "      <td>0.926421</td>\n",
+       "      <td>0.926424</td>\n",
+       "      <td>0.946667</td>\n",
+       "      <td>0.948381</td>\n",
+       "      <td>0.946667</td>\n",
+       "      <td>0.945882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>K-Neighbors Classifier</td>\n",
+       "      <td>0.892977</td>\n",
+       "      <td>0.894152</td>\n",
+       "      <td>0.892977</td>\n",
+       "      <td>0.893423</td>\n",
+       "      <td>0.920000</td>\n",
+       "      <td>0.923430</td>\n",
+       "      <td>0.920000</td>\n",
+       "      <td>0.920683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SVC</td>\n",
+       "      <td>0.886288</td>\n",
+       "      <td>0.890366</td>\n",
+       "      <td>0.886288</td>\n",
+       "      <td>0.887169</td>\n",
+       "      <td>0.906667</td>\n",
+       "      <td>0.913871</td>\n",
+       "      <td>0.906667</td>\n",
+       "      <td>0.907741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Decision Tree Classifier</td>\n",
+       "      <td>0.929766</td>\n",
+       "      <td>0.930644</td>\n",
+       "      <td>0.929766</td>\n",
+       "      <td>0.929967</td>\n",
+       "      <td>0.906667</td>\n",
+       "      <td>0.908382</td>\n",
+       "      <td>0.906667</td>\n",
+       "      <td>0.907171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>0.909699</td>\n",
+       "      <td>0.909452</td>\n",
+       "      <td>0.909699</td>\n",
+       "      <td>0.909512</td>\n",
+       "      <td>0.906667</td>\n",
+       "      <td>0.906570</td>\n",
+       "      <td>0.906667</td>\n",
+       "      <td>0.905955</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Model  Train Accuracy  Train Precision  \\\n",
+       "1      Random Forest Classifier        0.929766         0.929595   \n",
+       "2  Gradient Boosting Classifier        0.926421         0.926476   \n",
+       "3        K-Neighbors Classifier        0.892977         0.894152   \n",
+       "4                           SVC        0.886288         0.890366   \n",
+       "0      Decision Tree Classifier        0.929766         0.930644   \n",
+       "5           Logistic Regression        0.909699         0.909452   \n",
+       "\n",
+       "   Train Recall  Train F1 Score  Test Accuracy  Test Precision  Test Recall  \\\n",
+       "1      0.929766        0.929663       0.946667        0.948381     0.946667   \n",
+       "2      0.926421        0.926424       0.946667        0.948381     0.946667   \n",
+       "3      0.892977        0.893423       0.920000        0.923430     0.920000   \n",
+       "4      0.886288        0.887169       0.906667        0.913871     0.906667   \n",
+       "0      0.929766        0.929967       0.906667        0.908382     0.906667   \n",
+       "5      0.909699        0.909512       0.906667        0.906570     0.906667   \n",
+       "\n",
+       "   Test F1 Score  \n",
+       "1       0.945882  \n",
+       "2       0.945882  \n",
+       "3       0.920683  \n",
+       "4       0.907741  \n",
+       "0       0.907171  \n",
+       "5       0.905955  "
+      ]
+     },
+     "execution_count": 1844,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2 Model Performance Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.1 Top Performers\n",
+    "- **Random Forest Classifier**\n",
+    "- **Gradient Boosting Classifier**\n",
+    "\n",
+    "Both models excel with:\n",
+    "- **Test Accuracy:** 94.67%\n",
+    "- **Precision:** 94.84%\n",
+    "- **Recall:** 94.67%\n",
+    "- **F1 Score:** Highest among models\n",
+    "\n",
+    "These models are effective at distinguishing classes and handle class imbalance well. They also generalize well to new data without overfitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.2 Balanced Performance\n",
+    "- **Consistent Results:** Both Random Forest and Gradient Boosting show strong performance across training and testing datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.3 Good but Slightly Weaker Models\n",
+    "- **K-Neighbors Classifier**\n",
+    "- **SVC**\n",
+    "\n",
+    "While competitive, these models have:\n",
+    "- **Lower Accuracy and F1 Score** than the top performers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.4 Lowest Performers\n",
+    "- **Decision Tree Classifier**\n",
+    "- **Logistic Regression**\n",
+    "\n",
+    "- **Decision Tree:** Decent performance but lower F1 Score.\n",
+    "- **Logistic Regression:** Lowest F1 Score despite competitive accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.5 Overall Recommendation\n",
+    "- **For balanced performance and high accuracy:** Use Random Forest or Gradient Boosting.\n",
+    "- **For model interpretability and simplicity:** Consider Decision Trees or Logistic Regression, but note they may not balance precision and recall as well."
+   ]
   }
  ],
  "metadata": {
